# imgs2gray

./: README.md  main.py  pyproject.toml
